Return transferId for external API transfers